--- a/healthclub-backend/src/main/resources/application.properties
+++ b/healthclub-backend/src/main/resources/application.properties
@@ -1,5 +1,1 @@
-spring.h2.console.enabled=true
-spring.datasource.driverClassName=
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+logging.level.org=DEBUG
