Adding JWT authentication setup

--- a/healthclub-backend/src/main/resources/application.yml
+++ b/healthclub-backend/src/main/resources/application.yml
@@ -1,17 +1,26 @@
-server:
-  port: 8080
 spring:
-  application:
-    name: health-club
+  profiles:
+    active: "dev"
+
+---
+spring:
+  config:
+    activate:
+      on-profile: dev
   datasource:
     url: jdbc:mysql://localhost:3306/user
-    username: user
+    username: root
     password: password
   jpa:
     hibernate:
       ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-        format_sql: true
     show-sql: true
+  logging:
+    level:
+      ROOT: INFO
+
+---
+spring:
+  config:
+    activate:
+      on-profile: prod
