--- a/healthclub-backend/pom.xml
+++ b/healthclub-backend/pom.xml
@@ -58,6 +58,10 @@
 			<version>0.11.5</version>
 		</dependency>
 		<!-- end of security related dependencies -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
