Adding JWT dependencies in POM and an initial version of Gym table

--- a/healthclub-backend/pom.xml
+++ b/healthclub-backend/pom.xml
@@ -41,6 +41,7 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
 		<!-- end of db related dependencies -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -55,6 +56,16 @@
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-jackson</artifactId>
+			<version>0.11.5</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>0.11.5</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
 			<version>0.11.5</version>
 		</dependency>
 		<!-- end of security related dependencies -->
