--- a/healthclub-backend/src/main/resources/application.yml
+++ b/healthclub-backend/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     activate:
       on-profile: dev
   datasource:
-    url: jdbc:mysql://localhost:3306/user
+    url: jdbc:mysql://localhost:3306/healthclub
     username: root
     password: password
   jpa:
