--- a/healthclub-backend/src/main/resources/application.yml
+++ b/healthclub-backend/src/main/resources/application.yml
@@ -11,6 +11,9 @@ spring:
     url: jdbc:mysql://localhost:3306/healthclub
     username: root
     password: password
+  sql:
+    init:
+      mode: always
   jpa:
     hibernate:
       ddl-auto: update
