--- a/healthclub-backend/src/main/resources/application.yml
+++ b/healthclub-backend/src/main/resources/application.yml
@@ -16,8 +16,9 @@ spring:
       mode: always
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
+    defer-datasource-initialization: true
   logging:
     level:
       ROOT: INFO
