--- a/healthclub-frontend/package.json
+++ b/healthclub-frontend/package.json
@@ -1,20 +1,32 @@
 {
-  "name": "healthclub-frontend",
+  "name": "healthclubversion1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@heroicons/react": "^2.0.17",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.11.16",
+    "@mui/x-date-pickers": "^6.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
+    "google-map-react": "^2.2.0",
     "gsap": "^3.11.5",
+    "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-overlay-component": "^1.0.6",
-    "react-router": "^6.9.0",
-    "react-router-dom": "^6.9.0",
+    "react-jwt": "^1.1.8",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
