--- a/healthclub-backend/src/main/resources/application.yml
+++ b/healthclub-backend/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
       mode: always
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
     defer-datasource-initialization: true
   logging:
