--- a/healthclub-frontend/package.json
+++ b/healthclub-frontend/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-jwt": "^1.1.8",
     "react-leaflet": "^4.2.1",
+    "react-overlay-component": "^1.0.6",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
