--- a/healthclub-frontend/package.json
+++ b/healthclub-frontend/package.json
@@ -10,12 +10,14 @@
     "@heroicons/react": "^2.0.17",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.16",
+    "@mui/x-data-grid": "^6.3.0",
     "@mui/x-date-pickers": "^6.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "google-map-react": "^2.2.0",
