--- a/healthclub-frontend/package.json
+++ b/healthclub-frontend/package.json
@@ -12,11 +12,13 @@
     "@mui/material": "^5.11.16",
     "@mui/x-data-grid": "^6.3.0",
     "@mui/x-date-pickers": "^6.1.0",
+    "@mui/x-date-pickers-pro": "^6.3.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.3.0",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
@@ -24,7 +26,9 @@
     "gsap": "^3.11.5",
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
+    "react-animated-numbers": "^0.16.0",
     "react-bootstrap": "^2.7.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-jwt": "^1.1.8",
     "react-leaflet": "^4.2.1",
